--- a/seo.html
+++ b/seo.html
@@ -1,6 +1,8 @@
 ---
 layout: page
 title: Brampton Vaughan Website Design, Search Engine Optimization and Digital Marketing
+lang: en
+ref: seo
 permalink: /seo/
 ---
 
