--- a/blog.html
+++ b/blog.html
@@ -1,21 +1,26 @@
 ---
 layout: page
-title: Brampton Vaughan Website Design, Search Engine Optimization and Digital Marketing
-permalink: /thank-you/
+title: Blog Page English
+lang: en
+ref: blog
+permalink: /blog/
 ---
 
 <body>
 	{% include menu.html %}
-	<div class="jumbotron website-design-background"></div>
+	<div class="jumbotron blog-background"></div>
 
-	<div class="banner">
-		<h2>Thank you! Your message has been received!</h2>
-	</div>
+
+	<!-- <div class="banner">
+		<h2>Fast, modern and elegant websites that are easy to use.</h2>
+	</div> -->
 
 	
 
 	<div class="body-container">
 		<!-- <div class="row">
+	
+	
 			<div class="col-xs-12 serviceHeading">
 				<h1 class="toUpper bold">Website Design</h1>
 				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
@@ -23,64 +28,15 @@ permalink: /thank-you/
 					adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus, est unde numquam dignissimos,
 					nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
 			</div>
-		</div> -->
-
-		<div class="row eqHeight greybg">
-			<div class="col-xs-12 col-md-5 featuresPadding">
-
-				<form id="contactform" method="POST">
-					<input type="text" name="name" placeholder="Your name">
-					<input type="email" name="_replyto" placeholder="Your email">
-					<input type="hidden" name="_subject" value="Fivestar Media Contact Page" />
-					<input type="hidden" name="_next" value="https://fivestarmedia.com/" />
-					<textarea name="message" placeholder="Your message"></textarea>
-					<input type="text" name="_gotcha" style="display:none" />
-					<input type="submit" value="Send">
-				</form>
-				<script>
-					var contactform =  document.getElementById('contactform');
-					contactform.setAttribute('action', '//formspree.io/' + 'fivestarmediahq' + '@' + 'gmail' + '.' + 'com');
-				</script>
-
-			</div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div>
-
-		<!-- <div class="row eqHeight greyerbg">
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div></div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Mobile Responsive</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
 		</div>
 
 		<div class="row eqHeight greybg">
-			<div class="col-xs-12 col-md-5 featuresPadding">
+			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
 				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div>	
 			</div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
+			</div>
+			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="serviceDetail">
 					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
 					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
@@ -94,12 +50,30 @@ permalink: /thank-you/
 		</div>
 
 		<div class="row eqHeight greyerbg">
-			<div class="col-xs-12 col-md-5 featuresPadding">
+			<div class="col-xs-12 col-md-6 featuresPadding">
+				<div class="featuresImg">
+				<img src="{{ site.baseurl }}/images/brampton.jpg">
+			</div></div>
+			<div class="col-xs-12 col-md-6 featuresPadding">
+				<div class="serviceDetail">
+					<p class="toUpper bold serviceTextBox">Mobile Responsive</p>
+					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row eqHeight greybg">
+			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
 				<img src="{{ site.baseurl }}/images/brampton.jpg">
 			</div>	
 			</div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
+			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="serviceDetail">
 					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
 					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
@@ -110,9 +84,28 @@ permalink: /thank-you/
 						first impression, so make it the best.</p>
 				</div>
 			</div>
-		</div> -->
+		</div>
 
-		<!-- <div class="row">
+		<div class="row eqHeight greyerbg">
+			<div class="col-xs-12 col-md-6 featuresPadding">
+				<div class="featuresImg">
+				<img src="{{ site.baseurl }}/images/brampton.jpg">
+			</div>	
+			</div>
+			<div class="col-xs-12 col-md-6 featuresPadding">
+				<div class="serviceDetail">
+					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
+					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
+						first impression, so make it the best.</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="row">
 			<div class="col-xs-12 serviceHeading">
 				<h1 class="toUpper bold">Website Prices</h1>
 				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
@@ -193,8 +186,65 @@ permalink: /thank-you/
 				</ul>
 			</div>
 		</div> -->
-	</div>
-	{% include footer.html %}
+
+        <div class="row">
+            <div class="serviceHeading">
+        <h1 class="toUpper bold">Blog</h1>
+        <!-- <h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
+                est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa? ipsum dolor sit amet, consectetur
+                adipisicing elit.</h3> -->
+        </div>
+        </div>
+
+    <!-- display all posts matching current language --> 
+    {% assign posts=site.posts | where:"lang", page.lang %}
+    <ul class="blog">
+    {% for post in posts %}
+        <li>
+            <!-- <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> -->
+            <h2>{{ post.title }}</h2>
+            <h4>{{ post.excerpt }}</h4>
+            <a href="{{ site.baseurl }}{{ post.url }}">Read more</a>
+        </li>
+    {% endfor %}
+    </ul>
+
+
+    </div>
+	{% include footermaplesshelpless.html %}
+
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- language selector -->
+    <!-- <ul>
+        {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
+        {% for post in posts %}
+          <li>
+            <a href="{{ post.url }}" class="{{ post.lang }}">{{ post.lang }}</a>
+          </li>
+        {% endfor %}
+        
+        {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
+        {% for page in pages %}
+          <li>
+            <a href="{{ page.url }}" class="{{ page.lang }}">{{ page.lang }}</a>
+          </li>
+        {% endfor %}
+        </ul> -->
+
+
