--- a/blog.html
+++ b/blog.html
@@ -4,247 +4,46 @@ title: Blog Page English
 lang: en
 ref: blog
 permalink: /blog/
+published: false
 ---
-
 <body>
-	{% include menu.html %}
-	<div class="jumbotron blog-background"></div>
-
-
-	<!-- <div class="banner">
-		<h2>Fast, modern and elegant websites that are easy to use.</h2>
-	</div> -->
-
-	
-
-	<div class="body-container">
-		<!-- <div class="row">
-	
-	
-			<div class="col-xs-12 serviceHeading">
-				<h1 class="toUpper bold">Website Design</h1>
-				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
-					est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa? ipsum dolor sit amet, consectetur
-					adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus, est unde numquam dignissimos,
-					nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
-			</div>
-		</div>
-
-		<div class="row eqHeight greybg">
-			<div class="col-xs-12 col-md-6 featuresPadding">
-				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div>
-			</div>
-			<div class="col-xs-12 col-md-6 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="row eqHeight greyerbg">
-			<div class="col-xs-12 col-md-6 featuresPadding">
-				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div></div>
-			<div class="col-xs-12 col-md-6 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Mobile Responsive</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="row eqHeight greybg">
-			<div class="col-xs-12 col-md-6 featuresPadding">
-				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div>	
-			</div>
-			<div class="col-xs-12 col-md-6 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="row eqHeight greyerbg">
-			<div class="col-xs-12 col-md-6 featuresPadding">
-				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div>	
-			</div>
-			<div class="col-xs-12 col-md-6 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-xs-12 serviceHeading">
-				<h1 class="toUpper bold">Website Prices</h1>
-				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
-					est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa? ipsum dolor sit amet, consectetur
-					adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus, est unde numquam dignissimos,
-					nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
-			</div>
-		</div>
-
-		<div class="row eqHeight greyerbg featuresContainer">
-			<div class="col-xs-12 col-md-3 features">
-				<ul>
-					<h2 class="toUpper bold">Template</h2>
-					<h2 class="toUpper bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-				</ul>
-			</div>
-
-			<div class="col-xs-12 col-md-3 features">
-				<ul>
-					<h2 class="toUpper bold">Template+</h2>
-					<h2 class="toUpper bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-				</ul>
-			</div>
-
-			<div class="col-xs-12 col-md-3 features">
-				<ul>
-					<h2 class="toUpper bold">Custom</h2>
-					<h2 class="toUpper bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-				</ul>
-			</div>
-
-			<div class="col-xs-12 col-md-3 features">
-				<ul>
-					<h2 class="toUpper bold">Enterprise</h2>
-					<h2 class="toUpper bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-				</ul>
-			</div>
-		</div> -->
-
-        <div class="row">
-            <div class="serviceHeading">
-        <h1 class="toUpper bold">Blog</h1>
-        <!-- <h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
-                est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa? ipsum dolor sit amet, consectetur
-                adipisicing elit.</h3> -->
+    {% include menu.html %}
+    <div class="jumbotron blog-background"></div>
+    <div class="body-container">
+        <div class="row blogRow">
+            <div class="col-xs-12 col-md-10 serviceHeading">
+                <h1 class="toUpper bold">Blog</h1>
+            </div>
         </div>
+        <div class="row blogRow">
+            <div class="col-xs-12 col-md-10 serviceHeading">
+                <!-- display all posts matching current language -->
+                {% assign posts=site.posts | where:"lang", page.lang %}
+                <ul class="blog">
+                    {% for post in posts %}
+                    <li>
+                        <!-- <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> -->
+                        <h2>{{ post.title }}</h2>
+                        <h4>{{ post.excerpt }}</h4>
+                        <a href="{{ site.baseurl }}{{ post.url }}">Read more</a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
-
-    <!-- display all posts matching current language --> 
-    {% assign posts=site.posts | where:"lang", page.lang %}
-    <ul class="blog">
-    {% for post in posts %}
-        <li>
-            <!-- <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> -->
-            <h2>{{ post.title }}</h2>
-            <h4>{{ post.excerpt }}</h4>
-            <a href="{{ site.baseurl }}{{ post.url }}">Read more</a>
-        </li>
-    {% endfor %}
-    </ul>
-
-
     </div>
-	{% include footermaplesshelpless.html %}
-
-</body>
-
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- language selector -->
+    <!-- language selector -->
     <!-- <ul>
-        {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
-        {% for post in posts %}
-          <li>
-            <a href="{{ post.url }}" class="{{ post.lang }}">{{ post.lang }}</a>
-          </li>
-        {% endfor %}
-        
-        {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
-        {% for page in pages %}
-          <li>
-            <a href="{{ page.url }}" class="{{ page.lang }}">{{ page.lang }}</a>
-          </li>
-        {% endfor %}
-        </ul> -->
-
-
+    {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %} {% for post in posts %}
+    <li>
+        <a href="{{ post.url }}" class="{{ post.lang }}">{{ post.lang }}</a>
+    </li>
+    {% endfor %} {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %} {% for page in pages %}
+    <li>
+        <a href="{{ page.url }}" class="{{ page.lang }}">{{ page.lang }}</a>
+    </li>
+    {% endfor %}
+</ul> -->
+    {% include footermaplesshelpless.html %}
+</body>
+</html>
