--- a/contact.html
+++ b/contact.html
@@ -5,226 +5,71 @@ lang: en
 ref: contact
 permalink: /contact/
 ---
-
 <body>
 	{% include menu.html %}
 	<div class="jumbotron website-design-background"></div>
-
-
-	<div class="contactBanner">
+	<div class="banner">
 		<!-- <h2>Thank you for your interest in Fivestar Media. You may call us at (416) 464-6573, send us an email at <a href="mailto:ravifs@gmail.com">ravifs@gmail.com</a> or use the contact form below.</h2> -->
 		<script type="text/javascript">
 			//<![CDATA[
 			<!--
-			var x="function f(x){var i,o=\"\",l=x.length;for(i=l-1;i>=0;i--) {try{o+=x.c" +
-			"harAt(i);}catch(e){}}return o;}f(\")\\\"function f(x,y){var i,o=\\\"\\\\\\\""+
-			"\\\\,l=x.length;for(i=0;i<l;i++){if(i==32)y+=i;y%=127;o+=String.fromCharCod" +
-			"e(x.charCodeAt(i)^(y++));}return o;}f(\\\"\\\\DNAVI@HS\\\\\\\\006^XBXHBA\\\\"+
-			"\\\\030\\\\\\\\023\\\\\\\\016[\\\\\\\\006\\\\\\\\013b_YWQ\\\\\\\\033ERK\\\\" +
-			"\\\\037\\\\\\\\006\\\\\\\\016\\\\\\\\020C\\\\\\\\035\\\\\\\\n\\\\\\\\023\\\\"+
-			"\\\\025H\\\\\\\\000\\\\\\\\004\\\\\\\\037\\\\\\\\t\\\\\\\\037\\\\\\\\013\\\\"+
-			"\\\\034\\\\\\\\004Q\\\\\\\\033\\\\\\\\035T3\\\\\\\\037\\\\\\\\001\\\\\\\\03" +
-			"5\\\\\\\\n\\\\\\\\016\\\\\\\\032\\\\\\\\016]3eekb*%_h})gju-mn|}2fg5wc81.**4" +
-			">+\\\\\\\\026\\\\\\\\025\\\\\\\\017\\\\\\\\025\\\\\\\\021\\\\\\\\022\\\\\\\\"+
-			"025\\\\\\\\013\\\\\\\\010ZOEH\\\\\\\\r[\\\\\\\\\\\\\\\\\\\\\\\\020P\\\\\\\\" +
-			"\\\\\\\\\\\\\\\\023QXW^T\\\\\\\\031[O\\\\\\\\034\\\\\\\\001_\\\\\\\\037(3'%" +
-			"y\\\\\\\\031d*) &?#w<.&84 \\\\\\\\0242;615t830\\\\\\\\002}^\\\\\\\\023\\\\\\"+
-			"\\003\\\\\\\\025\\\\\\\\r\\\\\\\\003\\\\\\\\025'\\\\\\\\017\\\\\\\\004\\\\\\"+
-			"\\013\\\\\\\\002\\\\\\\\000C\\\\\\\\r\\\\\\\\000\\\\\\\\035M]\\\\\\\\022JU\\"+
-			"\\\\\\031\\\\\\\\005X\\\\\\\\014\\\\\\\\t\\\\\\\\036\\\\\\\\\\\\\\\\\\\\\\\\"+
-			"t\\\\\\\\026e!aljqgd|)ld~`.mu}}d:)9\\\\\\\\177*'82'-%\\\"\\\\,32)\\\"(f};)l" +
-			"o,0(rtsbus.o nruter};)i(tArahc.x=+o{)--i;0=>i;1-l=i(rof}}{)e(hctac};l=+l;x=" +
-			"+x{yrt{)611=!)31/l(tAedoCrahc.x(elihw;lo=l,htgnel.x=lo,\\\"\\\"=o,i rav{)x(" +
-			"f noitcnuf\")"                                                               ;
-			while(x=eval(x));
+			var x = "function f(x){var i,o=\"\",l=x.length;for(i=l-1;i>=0;i--) {try{o+=x.c" +
+				"harAt(i);}catch(e){}}return o;}f(\")\\\"function f(x,y){var i,o=\\\"\\\\\\\"" +
+				"\\\\,l=x.length;for(i=0;i<l;i++){if(i==32)y+=i;y%=127;o+=String.fromCharCod" +
+				"e(x.charCodeAt(i)^(y++));}return o;}f(\\\"\\\\DNAVI@HS\\\\\\\\006^XBXHBA\\\\" +
+				"\\\\030\\\\\\\\023\\\\\\\\016[\\\\\\\\006\\\\\\\\013b_YWQ\\\\\\\\033ERK\\\\" +
+				"\\\\037\\\\\\\\006\\\\\\\\016\\\\\\\\020C\\\\\\\\035\\\\\\\\n\\\\\\\\023\\\\" +
+				"\\\\025H\\\\\\\\000\\\\\\\\004\\\\\\\\037\\\\\\\\t\\\\\\\\037\\\\\\\\013\\\\" +
+				"\\\\034\\\\\\\\004Q\\\\\\\\033\\\\\\\\035T3\\\\\\\\037\\\\\\\\001\\\\\\\\03" +
+				"5\\\\\\\\n\\\\\\\\016\\\\\\\\032\\\\\\\\016]3eekb*%_h})gju-mn|}2fg5wc81.**4" +
+				">+\\\\\\\\026\\\\\\\\025\\\\\\\\017\\\\\\\\025\\\\\\\\021\\\\\\\\022\\\\\\\\" +
+				"025\\\\\\\\013\\\\\\\\010ZOEH\\\\\\\\r[\\\\\\\\\\\\\\\\\\\\\\\\020P\\\\\\\\" +
+				"\\\\\\\\\\\\\\\\023QXW^T\\\\\\\\031[O\\\\\\\\034\\\\\\\\001_\\\\\\\\037(3'%" +
+				"y\\\\\\\\031d*) &?#w<.&84 \\\\\\\\0242;615t830\\\\\\\\002}^\\\\\\\\023\\\\\\" +
+				"\\003\\\\\\\\025\\\\\\\\r\\\\\\\\003\\\\\\\\025'\\\\\\\\017\\\\\\\\004\\\\\\" +
+				"\\013\\\\\\\\002\\\\\\\\000C\\\\\\\\r\\\\\\\\000\\\\\\\\035M]\\\\\\\\022JU\\" +
+				"\\\\\\031\\\\\\\\005X\\\\\\\\014\\\\\\\\t\\\\\\\\036\\\\\\\\\\\\\\\\\\\\\\\\" +
+				"t\\\\\\\\026e!aljqgd|)ld~`.mu}}d:)9\\\\\\\\177*'82'-%\\\"\\\\,32)\\\"(f};)l" +
+				"o,0(rtsbus.o nruter};)i(tArahc.x=+o{)--i;0=>i;1-l=i(rof}}{)e(hctac};l=+l;x=" +
+				"+x{yrt{)611=!)31/l(tAedoCrahc.x(elihw;lo=l,htgnel.x=lo,\\\"\\\"=o,i rav{)x(" +
+				"f noitcnuf\")";
+			while (x = eval(x));
 			//-->
 			//]]>
-		</script>		
+		</script>
 	</div>
-
-	
-
 	<div class="body-container">
-		<!-- <div class="row">
-			<div class="col-xs-12 serviceHeading">
-				<h1 class="toUpper bold">Website Design</h1>
-				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
-					est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa? ipsum dolor sit amet, consectetur
-					adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus, est unde numquam dignissimos,
-					nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
-			</div>
-		</div> -->
-
-		<div class="row eqHeight greybg">
-			<div class="col-xs-12 col-md-5 featuresPadding">
-
+		<div class="row eqHeight">
+			<div class="col-xs-12 col-md-6 featuresPadding">
 				<form id="contactform" method="POST">
-					<input type="text" name="name" placeholder="Your name">
-					<input type="email" name="_replyto" placeholder="Your email">
+				<div class="nameEmail">
+					<input type="text" name="name" placeholder="Your name" class="inputField">
+					<input type="email" name="_replyto" placeholder="Your email" class="inputField">
+				</div>
 					<input type="hidden" name="_subject" value="Fivestar Media Contact Page" />
 					<input type="hidden" name="_next" value="{{ site.baseurl }}/thank-you/" />
-					<textarea name="message" placeholder="Your message"></textarea>
+					<textarea name="message" placeholder="Your message" class="textBox" rows="10"></textarea>
 					<input type="text" name="_gotcha" style="display:none" />
 					<input type="submit" value="Send">
 				</form>
 				<script>
-					var contactform =  document.getElementById('contactform');
+					var contactform = document.getElementById('contactform');
 					contactform.setAttribute('action', '//formspree.io/' + 'fivestarmediahq' + '@' + 'gmail' + '.' + 'com');
 				</script>
-
 			</div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
+			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="serviceDetail">
 					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
 						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
 						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div>
-
-		<!-- <div class="row eqHeight greyerbg">
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div></div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Mobile Responsive</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
 						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
 						first impression, so make it the best.</p>
 				</div>
 			</div>
 		</div>
-
-		<div class="row eqHeight greybg">
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div>	
-			</div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div>
-
-		<div class="row eqHeight greyerbg">
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div>	
-			</div>
-			<div class="col-xs-12 col-md-5 featuresPadding">
-				<div class="serviceDetail">
-					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
-						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
-						first impression, so make it the best.</p>
-				</div>
-			</div>
-		</div> -->
-
-		<!-- <div class="row">
-			<div class="col-xs-12 serviceHeading">
-				<h1 class="toUpper bold">Website Prices</h1>
-				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
-					est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa? ipsum dolor sit amet, consectetur
-					adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus, est unde numquam dignissimos,
-					nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
-			</div>
-		</div>
-
-		<div class="row eqHeight greyerbg featuresContainer">
-			<div class="col-xs-12 col-md-3 features">
-				<ul>
-					<h2 class="toUpper bold">Template</h2>
-					<h2 class="toUpper bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-				</ul>
-			</div>
-
-			<div class="col-xs-12 col-md-3 features">
-				<ul>
-					<h2 class="toUpper bold">Template+</h2>
-					<h2 class="toUpper bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-				</ul>
-			</div>
-
-			<div class="col-xs-12 col-md-3 features">
-				<ul>
-					<h2 class="toUpper bold">Custom</h2>
-					<h2 class="toUpper bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-				</ul>
-			</div>
-
-			<div class="col-xs-12 col-md-3 features">
-				<ul>
-					<h2 class="toUpper bold">Enterprise</h2>
-					<h2 class="toUpper bold">$700</h2>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-					<li>ABC</li>
-				</ul>
-			</div>
-		</div> -->
 	</div>
 	{% include footer.html %}
 </body>
-
 </html>
