--- a/website-design.html
+++ b/website-design.html
@@ -5,22 +5,17 @@ lang: en
 ref: website-design
 permalink: /website-design/
 ---
-
 <body>
 	{% include menu.html %}
-	<div class="jumbotron website-design-background"></div>
-
-
+	<div class="jumbotron website-design-background">
+		<h1 class="splash">Top of the World</h1>
+		<h2 class="splash">Take your company to new heights</h2>
+	</div>
 	<div class="banner">
 		<h2>Fast, modern and elegant websites that are easy to use.</h2>
 	</div>
-
-	
-
 	<div class="body-container">
 		<div class="row">
-	
-	
 			<div class="col-xs-12 serviceHeading">
 				<h1 class="toUpper bold">Website Design</h1>
 				<h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
@@ -29,82 +24,78 @@ permalink: /website-design/
 					nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
 			</div>
 		</div>
-
 		<div class="row eqHeight greybg">
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div>
+					<img src="{{ site.baseurl }}/images/brampton.jpg">
+				</div>
 			</div>
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="serviceDetail">
 					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
 						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
 						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
 						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
 						first impression, so make it the best.</p>
 				</div>
 			</div>
 		</div>
-
 		<div class="row eqHeight greyerbg">
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div></div>
+					<img src="{{ site.baseurl }}/images/brampton.jpg">
+				</div>
+			</div>
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="serviceDetail">
 					<p class="toUpper bold serviceTextBox">Mobile Responsive</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
 						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
 						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
 						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
 						first impression, so make it the best.</p>
 				</div>
 			</div>
 		</div>
-
 		<div class="row eqHeight greybg">
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div>	
+					<img src="{{ site.baseurl }}/images/brampton.jpg">
+				</div>
 			</div>
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="serviceDetail">
 					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
 						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
 						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
 						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
 						first impression, so make it the best.</p>
 				</div>
 			</div>
 		</div>
-
 		<div class="row eqHeight greyerbg">
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="featuresImg">
-				<img src="{{ site.baseurl }}/images/brampton.jpg">
-			</div>	
+					<img src="{{ site.baseurl }}/images/brampton.jpg">
+				</div>
 			</div>
 			<div class="col-xs-12 col-md-6 featuresPadding">
 				<div class="serviceDetail">
 					<p class="toUpper bold serviceTextBox">Beautiful Websites</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
 						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
 						first impression, so make it the best.</p>
-					<p class= "serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
+					<p class="serviceTextBox">Your website is your company's first impression, so make it the best. Your website is your company's first impression,
 						so make it the best. Your website is your company's first impression, so make it the best. Your website is your company's
 						first impression, so make it the best.</p>
 				</div>
 			</div>
 		</div>
-
 		<div class="row">
 			<div class="col-xs-12 serviceHeading">
 				<h1 class="toUpper bold">Website Prices</h1>
@@ -114,7 +105,6 @@ permalink: /website-design/
 					nesciunt placeat eveniet ex. Esse tempore quod culpa?</h3>
 			</div>
 		</div>
-
 		<div class="row eqHeight greyerbg featuresContainer">
 			<div class="col-xs-12 col-md-3 features">
 				<ul>
@@ -128,7 +118,6 @@ permalink: /website-design/
 					<li>ABC</li>
 				</ul>
 			</div>
-
 			<div class="col-xs-12 col-md-3 features">
 				<ul>
 					<h2 class="toUpper bold">Template+</h2>
@@ -144,7 +133,6 @@ permalink: /website-design/
 					<li>ABC</li>
 				</ul>
 			</div>
-
 			<div class="col-xs-12 col-md-3 features">
 				<ul>
 					<h2 class="toUpper bold">Custom</h2>
@@ -163,7 +151,6 @@ permalink: /website-design/
 					<li>ABC</li>
 				</ul>
 			</div>
-
 			<div class="col-xs-12 col-md-3 features">
 				<ul>
 					<h2 class="toUpper bold">Enterprise</h2>
@@ -188,7 +175,5 @@ permalink: /website-design/
 		</div>
 	</div>
 	{% include footermapless.html %}
-
 </body>
-
 </html>
