--- a/home.html
+++ b/home.html
@@ -5,16 +5,17 @@ lang: en
 ref: home
 permalink: /home/
 ---
-
 <body>
 	{% include menu.html %}
-	<div class="jumbotron home-background"></div>
-
+	<div class="jumbotron home-background">
+		<h1 class="splash"><span>This is what we do Top</span><span>Top the World Sites</span><span>is what we hi hello.</span></h1>
+		<h2 class="splash"><span>Take your company to</span><span>Best website making</span><span>your company to new</span></h2>
+		<!-- <button class="button" style="vertical-align:middle"><span>Work with Us</span></button> -->
+	</div>
 	<div class="banner">
 		<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit esse vero facilis commodi molestiae cum odit placeat
 			sit sunt suscipit nostrum ab distinctio, iure voluptatum. Dolorum recusandae soluta, officiis in.</h2>
 	</div>
-
 	<div class="body-container">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 serviceHeading">
@@ -27,58 +28,47 @@ permalink: /home/
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
 				<div class="serviceContainer">
 					<div class="serviceIcon">
-						<a href="#">
+						<a href="{{ site.baseurl }}/website-design/">
 							<img class="circular--square" src="{{ site.baseurl }}/images/website-design.jpg">
 						</a>
 					</div>
 					<div class="serviceText">
-						<p class="toUpper bold"><a href="#">Website Development</a></p>
-						<p><a href="#">Your website is your company's first impression, so make it the best.</a></p>
-						<p class="serviceLink bold"><a href="#">Learn More</a></p>
+						<p class="toUpper bold"><a href="{{ site.baseurl }}/website-design/">Website Development</a></p>
+						<p><a href="{{ site.baseurl }}/website-design/">Your website is your company's first impression, so make it the best.</a></p>
+						<p class="serviceLink bold"><a href="{{ site.baseurl }}/website-design/">Learn More</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
 				<div class="serviceContainer">
 					<div class="serviceIcon">
-						<a href="#">
+						<a href="{{ site.baseurl }}/seo/">
 							<img class="circular--square" src="{{ site.baseurl }}/images/search-engine-optimization.jpg">
 						</a>
 					</div>
 					<div class="serviceText">
-						<p class="toUpper bold"><a href="#">Search Engine Optimization</a></p>
-						<p><a href="#">Bring more people to your website by making it rank higher in search engines.</a></p>
-						<p class="serviceLink bold"><a href="#">Learn More</a></p>
+						<p class="toUpper bold"><a href="{{ site.baseurl }}/seo/">Search Engine Optimization</a></p>
+						<p><a href="{{ site.baseurl }}/seo/">Bring more people to your website by making it rank higher in search engines.</a></p>
+						<p class="serviceLink bold"><a href="{{ site.baseurl }}/seo/">Learn More</a></p>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 serviceCols">
-
 				<div class="serviceContainer">
 					<div class="serviceIcon">
-						<a href="#">
+						<a href="{{ site.baseurl }}/digital-marketing/">
 							<img class="circular--square" src="{{ site.baseurl }}/images/digital-marketing.jpg">
-						</a>	
+						</a>
 					</div>
-				<div class="serviceText">
-					<p class="toUpper bold"><a href="#">Digital Marketing</a></p>
-						<p><a href="#">Your website is your company's first impression, so make it the best.</a></p>
-						<p class="serviceLink bold"><a href="#">Learn More</a></p>
+					<div class="serviceText">
+						<p class="toUpper bold"><a href="{{ site.baseurl }}/digital-marketing/">Digital Marketing</a></p>
+						<p><a href="{{ site.baseurl }}/digital-marketing/">Your website is your company's first impression, so make it the best.</a></p>
+						<p class="serviceLink bold"><a href="{{ site.baseurl }}/digital-marketing/">Learn More</a></p>
 					</div>
 				</div>
-
 			</div>
-
 		</div>
-
-
-
-
-
-		
-
 	</div>
 	{% include footer.html %}
 </body>
-
 </html>
