--- a/punjabi-blog.html
+++ b/punjabi-blog.html
@@ -6,34 +6,51 @@ ref: blog
 permalink: /blog-punjabi/
 published: false
 ---
-
 <body>
-    <!-- language selector -->
-        <ul> 
-            {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
-            {% for post in posts %}
-              <li>
-                <a href="{{ post.url }}" class="{{ post.lang }}">{{ post.lang }}</a>
-              </li>
-            {% endfor %}
-            
-            {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
-            {% for page in pages %}
-              <li>
-                <a href="{{ page.url }}" class="{{ page.lang }}">{{ page.lang }}</a>
-              </li>
-            {% endfor %}
-            </ul>
+    {% include menu.html %}
+    <div class="jumbotron blog-background"></div>
+    <div class="body-container">
+        <div class="row blogRow">
+            <div class="col-xs-12 col-md-10 serviceHeading">
+                <h1 class="toUpper bold">Blog</h1>
+                <!-- <h3>ipsum dolor sit amet, consectetur adipisicing elit. Sunt qui aut molestiae mollitia quidem quas rem dolor voluptatibus,
+                est unde numquam dignissimos, nesciunt placeat eveniet ex. Esse tempore quod culpa? ipsum dolor sit amet, consectetur
+                adipisicing elit.</h3> -->
+            </div>
+        </div>
+        <div class="row blogRow">
+            <div class="col-xs-12 col-md-10 serviceHeading">
+                <!-- display all posts matching current language -->
+                {% assign posts=site.posts | where:"lang", page.lang %}
+                <ul class="blog">
+                    {% for post in posts %}
+                    <li>
+                        <!-- <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> -->
+                        <h2>{{ post.title }}</h2>
+                        <h4>{{ post.excerpt }}</h4>
+                        <a href="{{ site.baseurl }}{{ post.url }}">Read more</a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    </div>
+<!-- language selector -->
+<ul>
+    {% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
+    {% for post in posts %}
+      <li>
+        <a href="{{ post.url }}" class="{{ post.lang }}">{{ post.lang }}</a>
+      </li>
+    {% endfor %}
     
-        <!-- display all posts matching current language --> 
-        {% assign posts=site.posts | where:"lang", page.lang %}
-        <ul>
-        {% for post in posts %}
-            <li>
-                <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
-            </li>
-        {% endfor %}
-        </ul>
-    </body>
-
+    {% assign pages=site.pages | where:"ref", page.ref | sort: 'lang' %}
+    {% for page in pages %}
+      <li>
+        <a href="{{ page.url }}" class="{{ page.lang }}">{{ page.lang }}</a>
+      </li>
+    {% endfor %}
+    </ul>
+    {% include footermaplesshelpless.html %}
+</body>
 </html>
